# AgentHub

./: .gitignore  ARCHITECTURE.md  COMPLIANCE.md  PRODUCTION_UPGRADE_REPORT.md  README.md  docker-compose.yml  pyproject.toml
api/: .env.example  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: d7ffa8f9c684_add_document_chunks_for_rag.py
api/app/: api.py  audit.py  circuit_breaker.py  models.py  schemas.py  security.py  services_ai_flows.py  services_litellm_gateway.py  services_llm.py  services_rag.py
api/app/agents/: __init__.py  chat_models.py  prompts.py  react_agent.py
api/app/core/: __init__.py  config.py  context.py  errors.py  metrics.py  redis.py  types.py
api/app/documents/: __init__.py  service.py
api/app/domain/: __init__.py  agent.py  embeddings.py  errors.py  execution.py  llm.py  memory.py  task.py  tool.py  tools.py  workflow.py
api/app/flows/: __init__.py  ask.py  classify.py  common.py  notary.py
api/app/http/: __init__.py  app.py  dependencies.py  error_handlers.py  (+2 more)
api/tests/: conftest.py  test_agent.py  test_agent_api.py  test_agent_tools.py  test_api.py  test_audit.py  test_calculator_tool.py  test_circuit_breaker.py  test_config.py  test_core_errors_extra.py  test_data_access_and_legacy_llm.py  test_embeddings_and_chat_models.py  test_litellm.py  test_providers_llm_streams.py  test_providers_registry_and_impls.py  test_rag.py  test_rag_pipeline.py  test_redis.py  test_router_internal_branches.py  test_security.py  test_services_agent_document_audit.py  test_services_ai_flows.py  test_services_core_layer.py  test_services_llm.py  test_services_rag.py  test_streaming.py
(+120 files in other folders)
